server_error.txt
C:\Users\UncommonStudent\Documents\React-projects\School website\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/server.ts(4,10): error TS2305: Module '"@prisma/client"' has no exported member 'PrismaClient'.

    at createTSError (C:\Users\UncommonStudent\Documents\React-projects\School website\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\UncommonStudent\Documents\React-projects\School website\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\UncommonStudent\Documents\React-projects\School website\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\UncommonStudent\Documents\React-projects\School website\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\UncommonStudent\Documents\React-projects\School website\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1706:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\UncommonStudent\Documents\React-projects\School website\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2305 ]
}
